Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59650

QIntValidator::validate doesn't return Intermediate for value with number of digits equal to or less than the max value

XMLWordPrintable

    • 4b5afc788f8f476a7bb2f57872ad8a017bf0c870 5bb7daaf19f312636b4f5cd5b14b26d84b66f45a

      If the validator is QIntValidator v(100, 900, 0) and validated string is 999, the QIntValidator::validate() should return Intermediate because the number of digits is equal to or less than the max value, but it returns Invalid instead.

      Steps to reproduce the issue:
      1. Run attached sample project

      Expected outcome:
      The return value should be Intermidiate = 1

      Actual outcode:
      The return value is Invalid = 0

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tuheimon Tuomas Heimonen (Inactive)
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: